# yaps.chat

./: .env.example  CHANGELOG.md  INSTALLATION.md  README.md  next.config.ts  package-lock.json  package.json
.github/: FUNDING.yml
app/: globals.css  layout-client.tsx  layout.tsx  opengraph-image.alt  page.tsx
app/[...whatever]/: page.tsx
app/api/turnstile/: route.ts
app/components/chat/: chat-header.tsx  chat.tsx  conversation.tsx  message-notification.tsx  message-user.tsx  message.tsx
app/components/chat-input/: button-emoji-picker.tsx  button-file-upload.tsx  button-gif-picker.tsx  button-record.tsx  button-video-chat.tsx  chat-input.tsx
app/components/essentials/: log-viewer.tsx  share-group-code.tsx  update-app-banner.tsx  upgrade-to-pro.tsx
app/components/layout/: chat-options.tsx  feedback-widget.tsx  footer.tsx  header.tsx  layout-app.tsx  playground.tsx  settings.tsx
app/components/video-chat/: draggable-video-chat.tsx  (+2 more)
components/common/: feedback-form.tsx  responsive-dialog.tsx  tooltip.tsx
components/motion-primitives/: morphing-popover.tsx
components/ui/: badge.tsx  button.tsx  input.tsx  loader.tsx  textarea.tsx
hooks/: use-chat-web-sockets.tsx  use-local-storage.ts  use-media-query.ts
lib/: config.ts  crypto.ts  indexedDB.ts  logger.ts
lib/types/: chat.ts  user.ts
providers/: tooltip-provider.tsx
server-rust/: Cargo.toml  README.md  example.Secrets.toml
server-rust/src/: handler.rs  keys.rs  main.rs  server.rs
tgbot-rust/: Cargo.toml  README.md  example.Secrets.toml
tgbot-rust/src/: handler.rs  keys.rs  main.rs
