[package]
name = "notchat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = { version = "1.26.0", features = ["full", "rt-multi-thread"] }
actix = "0.13.5"
actix-ws = "0.3.0"
actix-cors = "0.7"
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11.6"